<resources>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="basePath" translatable="false">https://www.bitrittobonus.com</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="imagesPath" translatable="false">/images/images/</string>
    <string name="savingok">Saving OK</string>
    <string name="dialogNegativeButton">I\'M SURE</string>
    <string name="dialogPositiveButton">RETRY</string>
    <string name="dialogYES">YES</string>
    <string name="dialogNO">NO</string>
    <string name="dialogTitleElementDelete">deletion of the element</string>
    <string name="dialogDescriptionElementDelete">Do you really want to delete this element?</string>
    <string name="dialogIMSURE">I\'M SURE</string>
    <string name="dialogCANCEL"><![CDATA[CANCEL]]></string>
    <string name="dialog_wait">Loading …</string>
    <string name="splash">splash image</string>
    <string name="app_name">Shifts Caledar Loyalty Cards</string>
    <string name="page_login_name">Login Shifts Caledar</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="first_access">First Access?</string>
    <string name="register">Register</string>
    <string name="password_lost">Password lost?</string>
    <string name="recover_button">Recover password</string>
    <string name="loginnok">E-mail or password wrong</string>
    <string name="autoLogin">Automatic login executed</string>
    <string name="loginExecuted">Login executed</string>
    <string name="ServerLost">Server Lost</string>
    <string name="can_not_connect">Cannot connect</string>
    <string name="there_is_no_internet_connection">There is no internet connection</string>
    <string name="login_status">Login Status</string>
    <string name="email_extension_wrong">The length of extension it\'s wrong</string>
    <string name="email_without_at">The email don\'t contain @</string>
    <string name="email_without_dot">The email don\'t contain dot</string>
    <string name="email_wrong_format">The email format is wrong</string>
    <string name="email_illegal_spaces">The email contain spaces</string>
    <string name="email_illegal_char">The email contain illegal characters</string>
    <string name="password_illegal_char">Wrong format, you need 1 digit lower, upper and special @#$%^!&amp;</string>
    <string name="password_extension_wrong">The length of password is less then 8 char </string>
    <string name="password_illegal_spaces">The password contain spaces</string>
    <string name="password_illegal_date">The right format is DD/MM/YYYY</string>
    <string name="password_illegal_currency">The right format is 9999.99</string>
    <string name="password_illegal_currency_dot">We need a comma</string>
    <string name="data_loading_failed">Data loading failed</string>
    <string name="image_loading_failed">Image loading failed</string>
    <string name="data_saving_failed">Data saving failed</string>
    <string name="registration_impossible">Registration impossible</string>
    <string name="all_terms_necessary">, you need to accept all terms</string>
    <string name="registration_status">Registration Status</string>
    <string name="page_register_name">BitrittoBonus Register</string>
    <string name="terms_of_use">Term of use</string>
    <string name="general_cond">General conditions</string>
    <string name="read_me">Read me</string>
    <string name="policy_privacy">Policy privacy</string>
    <string name="rememb_problem">There has been a problem saving the password on your device, you\'ll have to do the login manually the next time</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="emailProfile">E-mail</string>
    <string name="emailProfileIsPublic">Show to everybody your e-mail</string>
    <string name="informationProfile">This information is stored locally and will only be sent when needed</string>
    <string name="sendProfileSwitch">You want to remotely store this information</string>
    <string name="Settings">Settings</string>
    <string name="SettingsListProfile">Profile</string>
    <string name="SettingsListUserProfile">User Profile</string>
    <string name="settings_list_cells_style">Edit shift</string>
    <string name="settings_list_cards">Cards</string>
    <string name="SettingsListMakeShifts">Make shifts</string>
    <string name="SettingsListLogout">Logout</string>
    <string name="SettingsListExit">Exit</string>
    <string name="SettingsListAuth">App Authorizations</string>
    <string name="privacyInfo">Privacy Information</string>
    <string name="instructions">Instructions</string>
    <string name="str_new">New</string>
    <string name="about">About</string>
    <string name="about_version">About version</string>
    <string name="version">Version</string>
    <string name="instruction_string">"In this section you will find general instructions for the menu, for more detailed instructions consult the dedicated sections inside.

Cards
Management and display of Loyalty Cards and Cards

Edit shifts
From this setting it is possible to add or remove individual shift times.

Make shifts rotation
From this setting it is possible to create the rotation of shifts in the desired year or period.
It is possible to have different shifts in different periods.

Instruction
This Window

Backup
From here you can save a copy of all application data inside the device.

Restore
This setting allows you to retrieve previously stored application data.

About version
From here you can check the various updates of the application.

Credits
This option allows you to view any rights of third-party program authors.

App permissions
From here you can access the permissions granted on your device.

Privacy information
This section contains all information relating to privacy.

Exit
With this button you quit the application."</string>
    <string name="cards_string">"In this window you can add cards and Green Cards or search for a card.

Search
To search for a card, enter the letters contained in the search box, the filter is automatic.

Add
It is possible to add a card to the list using the button next to the question mark with three dashes and +.

Delete
To delete an element from the list, swipe the element to the left.

Sort
To sort the list, hold down the item and move it to the desired position.

Modify
To edit an item or view photos simply touch an item in the list, the edit window will open."</string>
    <string name="latest_update_string">"
Cumulative update to 2024 to comply with Play Store policies
"</string>
    <string name="latest_update_note">"To review this message and all application updates check in the 'Settings' - 'About Version' section"</string>
    <string name="about_string">"
Ver. 8.01
* Cumulative update to 2024 to comply with Play Store policies

Ver. 8.00
* Cumulative update to 2023 to comply with Play Store policies

Ver. 7.04
* It is no longer possible to save cards without having given the name to it.
* The UPC-A format barcode reading error has been corrected.
* Added the ability to change the font size in the calendar.

Ver. 7.03
* The menu for automatically creating annual holidays has been added to the main window.
* Monthly statistics have been added, you will be able to more easily check permits and overtime.

Ver. 7.02
* All buttons have been integrated into the top bar
* Statistics have been added (window only)
* The descriptions of the side menu have been shortened
* Card animations have been optimized

Ver. 7.01
* Completely modified the graphic interface by creating the navigation menu
* Added left and right scrolling to change months
* Minority bugs fixed

Ver. 6.62
* Fixed visibility cards in edit mode

Ver. 6.61
* Fixed crash when swiping left
* Added revision notes to application update

Ver. 6.6
* The display modalities of the cards have been corrected
* Added the deletion of notes directly in the menu
* Note, Overtime and Permit flags update instantly.

Ver. 6.5
* The ability to upload photos from the gallery has been added to the Loyalty Cards.
* The problem of immediate saving of 'Long Description' and 'Short Description' in 'Edit Shifts' has been resolved.
* Fixed 'Long Description' deletion with empty 'Short Description' in the shift list.
* Added titles to all info windows.

Ver. 6.4
* Shifts even if canceled remain in the calendar.
* The possibility of storing cards locally has been added.
* Moved OK information dialogs.
* Increased visibility of notes.
* Fixed problem of not displaying multi-lines in notes.
* Fixed problem of possible note modification after selection change.
* Added automatic cell selection to the long click on the calendar.
* Added information windows on the various app tabs.
* Added privacy window before accessing the room.
* Added privacy button in the menu.

Ver. 6.3
* Added automatic restart to manual upload of backups.
* Added automatic backup on uninstall.
* Added external access for saving files.
* Added check of dates before shifts creation.
* Added manual backup and restore.
* Fixed bug of overwriting new shifts.

Ver. 6.2
* modified shift rotation creation dialog.

Ver. 6.1
* Added backup and restore menus (not active).
* Added shift rotation creation dialog.

Ver. 6.0
* Added description information.
* Fixed the English version.
* Fixed sequence reset in case of elimination of all rotation turns.

Ver. 5.0
* Information and Credits menu added in Settings.
* Fixed bug in inserting new shifts higher than the tenth.
* Fixed possible crash in case of wrong shift reading in shift creation.
* Fixed possible crash in case of wrong shift reading in main.

Ver. 4.0
* Added overtime and holidays. "</string>
    <string name="latest_update_title">Latest updates</string>
    <string name="title_mca_string">"In this window you can add and edit card data.

Description
Enter a full description for the card, it will be displayed in the list.

View the photo
If you are only viewing the photos you can open the original photo by clicking on it.

Change your card
Click on the button with the pencil to enable the changes.

add a photo
Click on 'camera photo' to take a photo.

Add a Barcode or QR Code
Click on the dedicated button to acquire a Barcode or QR Code

Orient the photo
Click on the circular arrows to orient the photo at will.

Save your changes
Click on the disk to save. "</string>
    <string name="credits">Credits</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="reminder">Reminder</string>
    <string name="add_holiday">Add Holiday</string>
    <string name="msa_sh_hint">Hour select</string>
    <string name="txt_make_shift_title">Make shift rotation</string>
    <string name="txt_make_shift_rotation_instructions">Click on the elements on the bottom to remove it from the shift rotation</string>
    <string name="txt_make_shift_rotation_instructions_right">Click on the elements on the bottom to add it on left list</string>
    <string name="txt_make_shift_rotation_date_instructions">"The earliest date is the day the shift rotation generation starts, the default shift is 6–14"</string>
    <string name="et_make_shift_description">Shift A rotation</string>
    <string name="string_start_date_hint">Start\ndate</string>
    <string name="string_end_date_hint">End\ndate</string>
    <string name="string_start_date">10/06/2021</string>
    <string name="string_end_date">11/06/2021</string>
    <string name="dhs_start_title">Hour start</string>
    <string name="dhs_end_title">Hour end</string>
    <string name="save">Save</string>
    <string name="stats">Stats</string>
    <string name="font_size">Font size</string>
</resources>