<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_question_white"
        android:onClick="onClickInformation"
        android:title="@string/instructions"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_festivity"
        android:orderInCategory="100"
        android:visible="false"
        android:icon="@drawable/ic_edit_white"
        android:onClick="onClickFestivity"
        android:title="@string/add_holiday"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_char_dim"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit_white"
        android:onClick="onClickCharDim"
        android:title="@string/font_size"
        app:showAsAction="never" />

</menu>