<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LoginActivity"
    android:id="@+id/loginActivity">


    <LinearLayout
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding"
        android:background="@color/primaryDarkColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/page_login_name"
            android:textColor="@color/secondaryLightColor"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/label"
        android:id="@+id/linear_layout_external"
        android:layout_alignParentStart="true"
        android:padding="@dimen/appbar_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_style_background"
                    android:ems="13"
                    android:gravity="center_horizontal"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/appbar_padding" />


                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    >
                    <EditText
                        android:id="@+id/text_password"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/item_style_background"
                        android:ems="30"
                        android:gravity="center_horizontal"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/appbar_padding" />

                    <Button
                        android:id="@+id/text_password_eye_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_no_eye"/>

                </LinearLayout>
                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:ems="13"
                    android:text="@string/login"
                    android:textSize="18sp" />


                <CheckBox
                    android:id="@+id/remember_me_check"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primaryDarkColor"
                    android:checked="true"
                    android:gravity="center_horizontal"
                    android:text="@string/remember_me"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/first_access"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/first_access"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonRegister"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:text="@string/register"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lost_access"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:text="@string/password_lost"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/buttonRecovery"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primaryDarkColor"
                    android:text="@string/recover_button"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>