<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/border_square_rounded_app">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <!--Hour start-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/dhs_start_title"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/bt_dhs_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msa_sh_hint"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--Hour end-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/dhs_end_title"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/bt_dhs_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msa_sh_hint"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <!--Hour end-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:padding="@dimen/icon_margin">

                <Button
                    android:id="@+id/bt_dhs_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/save"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>